--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'aix.project'
+group = 'aix.project.chatez'
 version = '0.0.1-SNAPSHOT'
 
 java {
