--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -34,7 +34,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # 환경별 yml 파일 생성(1) - application.yml
+      # 환경별 yml 파일 생성 - application.yml
       - name: make application.yml
         if: |
           contains(github.ref, 'master') ||
