--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,12 @@ java {
 	sourceCompatibility = '17'
 }
 
-sourceSets {
-	main {
-		java.srcDirs = ['src/main/java']
-		resources.srcDirs = ['src/main/resources', 'src/main/webapp']
-	}
-}
+//sourceSets {
+//	main {
+//		java.srcDirs = ['src/main/java']
+//		resources.srcDirs = ['src/main/resources', 'src/main/webapp']
+//	}
+//}
 
 configurations {
 	compileOnly {
@@ -32,6 +32,8 @@ repositories {
 dependencies {
 	// https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
 	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.3.0'
+	// https://mvnrepository.com/artifact/org.opensearch.client/opensearch-rest-high-level-client
+	implementation group: 'org.opensearch.client', name: 'opensearch-rest-high-level-client', version: '2.9.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
