이전 대화내용 전송하기 기능 추가

--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -60,7 +60,7 @@ jobs:
         shell: bash
 
       # AWS credentials을 설정하여 AWS 서비스에 액세스
-      - name: AWS credentials 설정
+      - name: AWS credentials 액세스
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
