--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,14 @@ dependencies {
 	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.3.0'
 	// https://mvnrepository.com/artifact/org.opensearch.client/opensearch-rest-high-level-client
 	implementation group: 'org.opensearch.client', name: 'opensearch-rest-high-level-client', version: '2.9.0'
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
 	compileOnly 'org.projectlombok:lombok'
