--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,14 @@ open-search:
   hostname: search-chatez-domain-3gyvfxsvei5ggu4oexqspqeqiu.ap-northeast-2.es.amazonaws.com
   username: chatez-master
   password: ChatEZ-Master1
+
+cloud:
+  aws:
+    s3-bucket: chatez-bucket
+    s3-upload-path: chatez-uploaded-images
+    credentials-access-key: AKIAZMQLYGAVXWNYQJ7X
+    credentials-secrete-key: 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
+    region-static: ap-northeast-2
+    region-auto: false
+    stack:
+      auto: false
